--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 		</plugins>
 	</build>
 	<dependencies>
-		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 	</dependencies>
 </project>
